--- a/Core_BI/03 XGBoost.ipynb
+++ b/Core_BI/03 XGBoost.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
       "No     988\n",
       "Yes    188\n",
       "Name: Attrition, dtype: int64\n",
-      "[20:01:27] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1693020860993/work/src/learner.cc:767: \n",
+      "[20:37:28] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1693020860993/work/src/learner.cc:767: \n",
       "Parameters: { \"boosting_type\", \"subsample_freq\" } are not used.\n",
       "\n",
       "[0]\ttrain-auc:0.59995\tvalid-auc:0.60057\n",
@@ -118,6 +118,7 @@
       "[395]\ttrain-auc:0.92756\tvalid-auc:0.83611\n",
       "[400]\ttrain-auc:0.92733\tvalid-auc:0.83696\n",
       "[405]\ttrain-auc:0.92786\tvalid-auc:0.83710\n",
+      "[406]\ttrain-auc:0.92786\tvalid-auc:0.83781\n",
       "[0.09025367 0.05305313 0.10022531 0.04389215 0.77388245 0.19379143\n",
       " 0.29456222 0.03446483 0.00261886 0.24815054 0.06270972 0.17982718\n",
       " 0.04234713 0.77886975 0.21791327 0.00635191 0.08494635 0.05557686\n",
@@ -175,30 +176,29 @@
     "test = pd.read_csv(dp + 'AI_Cheats/employee_turnover/test.csv', index_col=0)\n",
     "print(train['Attrition'].value_counts())\n",
     "\n",
-    "# 处理 Attrition 字段\n",
-    "train['Attrition']=train['Attrition'].map(lambda x:1 if x=='Yes' else 0)\n",
+    "# Process the Attrition column\n",
+    "train['Attrition'] = train['Attrition'].map(lambda x: 1 if x == 'Yes' else 0)\n",
     "\n",
-    "# 查看数据是否有空值\n",
+    "# Check for missing values\n",
     "#print(train.isna().sum())\n",
     "\n",
-    "# 去掉没用的列 员工号码，标准工时（=80）\n",
+    "# Remove unnecessary columns: EmployeeNumber, StandardHours (which is always 80)\n",
     "train = train.drop(['EmployeeNumber', 'StandardHours'], axis=1)\n",
     "test = test.drop(['EmployeeNumber', 'StandardHours'], axis=1)\n",
     "\n",
-    "# 对于分类特征进行特征值编码\n",
-    "attr=['Age','BusinessTravel','Department','Education','EducationField','Gender','JobRole','MaritalStatus','Over18','OverTime']\n",
-    "lbe_list=[]\n",
+    "# Encode categorical features\n",
+    "attr = ['Age', 'BusinessTravel', 'Department', 'Education', 'EducationField', 'Gender', 'JobRole', 'MaritalStatus', 'Over18', 'OverTime']\n",
+    "lbe_list = []\n",
     "for feature in attr:\n",
-    "    lbe=LabelEncoder()\n",
-    "    train[feature]=lbe.fit_transform(train[feature])\n",
-    "    test[feature]=lbe.transform(test[feature])\n",
+    "    lbe = LabelEncoder()\n",
+    "    train[feature] = lbe.fit_transform(train[feature])\n",
+    "    test[feature] = lbe.transform(test[feature])\n",
     "    lbe_list.append(lbe)\n",
-    "#train.to_csv('temp.csv')\n",
-    "#print(train)\n",
-    "\n",
+    "    \n",
+    "# Define XGBoost parameters\n",
     "param = {\n",
     "    'boosting_type': 'gbdt',\n",
-    "    'objective': 'binary:logistic', #\n",
+    "    'objective': 'binary:logistic',\n",
     "    'eval_metric': 'auc',\n",
     "    'eta': 0.1,\n",
     "    'max_depth': 1,\n",
@@ -209,15 +209,20 @@
     "    'lambda': 0,\n",
     "}\n",
     "\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(train.drop('Attrition',axis=1), train['Attrition'], test_size=0.2, random_state=2023)\n",
+    "# Split training data\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(train.drop('Attrition', axis=1), train['Attrition'], test_size=0.2, random_state=2023)\n",
     "\n",
+    "# Convert data to DMatrix for XGBoost\n",
     "train_data = xgb.DMatrix(X_train, label=y_train)\n",
     "valid_data = xgb.DMatrix(X_valid, label=y_valid)\n",
     "test_data = xgb.DMatrix(test)\n",
     "\n",
-    "model = xgb.train(param, train_data, evals=[(train_data, 'train'), (valid_data, 'valid')], num_boost_round = 100000, early_stopping_rounds=100, verbose_eval=5)\n",
+    "# Train the model\n",
+    "model = xgb.train(param, train_data, evals=[(train_data, 'train'), (valid_data, 'valid')], num_boost_round=100000, early_stopping_rounds=100, verbose_eval=5)\n",
+    "\n",
+    "# Make predictions\n",
     "predict = model.predict(test_data)\n",
-    "test['Attrition']=predict\n",
+    "test['Attrition'] = predict\n",
     "print(predict)"
    ]
   },
